Bug 1880765 - tone down warning when unexpected status was found for parsing Berkeley Mail status header. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D202132

--HG--
extra : rebase_source : 9915734dcf4cfc86195851d6e074e069d4044d19
extra : amend_source : ee97e9d064c772d525d4565ac58aca87dc42a24f